# grpc-cpp-demo

./: CMakeLists.txt  README.md
client/: client.cpp
proto/: product.proto
proto_generation/: product.grpc.pb.cc  product.grpc.pb.h  product.pb.cc  product.pb.h
server/: server.cpp
